--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -488,10 +488,10 @@
    "outputs": [],
    "source": [
     "# Declaring Twitter accesss tokens and API Keys\n",
-    "consumer_key = '7aFA4Pyym0HuDTuc2Yeh5ZaMd'\n",
-    "consumer_secret = 'docgbWtW2rmJ9dGllBGM4IUiSYk2pFSKYscvj1q1jPwQAon9gs'\n",
-    "access_token = 'AAAAAAAAAAAAAAAAAAAAAJI0eAEAAAAAdiPxTYgzjsB9DuESRxWq%2Fsfbe3U%3DiMDn3rim07RKLqrmA4omQMkM84jGN2weSm78r2Y3QIj9OiEllj'\n",
-    "access_secret = '981559824298233857-87iOiTIzFcg1vtuPMhFYcgH8xLTcFaS'"
+    "consumer_key = 'YOUR CONSUMER KEY HERE'\n",
+    "consumer_secret = 'YOUR CONSUMER KEY HERE'\n",
+    "access_token = 'YOUR CONSUMER KEY HERE'\n",
+    "access_secret = 'YOUR CONSUMER KEY HERE'"
    ]
   },
   {
